<resources>
    <string name="app_name">FYM</string>
    <string name="instruction_str">Press on the screen to move up, release in order to move down. Collect as many coins as you can while avoiding from enemies. good luck :)</string>
    <string name="instruct_ttl">Instruction</string>
    <string name="done_str">Done</string>
    <string name="start_str">Start</string>
    <string name="score_str">Scoreboard</string>
    <string name="score">Score</string>
    <string name="tap_str">Tap to start</string>
    <string name="again_str">Try again</string>
    <string name="home_str">Home page</string>
    <string name="high_score_str">High Score</string>
</resources>
