<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResultActivity"
    android:background="@drawable/gameover"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="0"
        android:layout_margin="15dp"
        android:id="@+id/scoreLabel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:text="@string/high_score_str"
        android:id="@+id/highScoreLabel"/>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp">

    <Button
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:text="@string/again_str"
        android:textAllCaps="false"
        android:background="@drawable/sec_brn_shape"
        android:id="@+id/try_again" />

    <Button
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:id="@+id/back_home"
        android:textAllCaps="false"
        android:background="@drawable/sec_brn_shape"
        android:text="@string/home_str"/>

</LinearLayout>

</LinearLayout>