<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    android:orientation="horizontal"
    tools:context=".StartActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:background="@drawable/background_logo"
    xmlns:android="http://schemas.android.com/apk/res/android">



        <ImageView
            android:layout_width="300dp"
            android:layout_height="320dp"
            android:src="@drawable/flying_2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="110dp"
            android:id="@+id/im_iv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/start_btn"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_shape"
            android:text="@string/start_str"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/score_board"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape"
            android:text="@string/score_str"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/instruct_btn"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape"
            android:text="@string/instruct_ttl"
            android:textAllCaps="false"/>

    </LinearLayout>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/sound_on"
        android:id="@+id/sound_btn"/>

</LinearLayout>